Silicon-design-webapp/wwwroot/css/site.css
/* ... */
.btn-theme:hover {
  text-decoration: none;
  background: #565973;
  color: #FFFFFF;
}

.btn-theme-s {
  border-radius: 6px;
  text-align: center;
  font-size: 14px;
  padding: 8px 28px;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 12px;
  box-shadow: 0px 8px 18px -8px rgba(99, 102, 241, 0.9);
  background: #6366F1;
  color: #FFFFFF;
  padding-top: 10px;
  padding-bottom: 13px;
}
.btn-theme-s:hover {
  box-shadow: 0px 8px 18px -8px rgba(19, 16, 34, 0.15);
  text-decoration: none;
  background: #565973;
  color: #FFFFFF;
}

.btn-gray {
  border-radius: 6px;
  text-align: center;
  font-size: 14px;
  padding: 8px 28px;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 12px;
  background: #EFF2FC;
  color: #33354D;
  border: none;
}
.btn-gray:hover {
  text-decoration: none;
  background: #565973;
  color: #FFFFFF;
}
.btn-gray .sign-in {
  rotate: 270deg;
}

.btn-switch {
  display: flex;
  align-items: center;
  gap: 10px;
}
.btn-switch label {
  line-height: 160%;
  font-weight: 400;
  color: #565973;
  font-family: "Manrope", sans-serif;
  font-size: 1rem;
  color: #33354D;
  font-weight: 600 !important;
}
.btn-switch .switch {
  position: relative;
  display: inline-block;
  width: 46px;
  height: 25px;
}
.btn-switch .switch input {
  opacity: 0;
  width: 0;
  height: 0;
}
.btn-switch .switch input:checked + .slider {
  background-color: #6366F1;
}
.btn-switch .switch input:focus + .slider {
  box-shadow: 0 0 1px #6366F1;
}
.btn-switch .switch input:checked + .slider:before {
  transform: translateX(20px);
  background-color: #FFFFFF;
}
.btn-switch .switch .slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #565973;
  transition: 0.4s;
}
.btn-switch .switch .slider:before {
  position: absolute;
  content: "";
  height: 20px;
  width: 20px;
  left: 3px;
  bottom: 2.7px;
  background-color: #FFFFFF;
  transition: 0.4s;
}
.btn-switch .switch .slider.round {
  border-radius: 34px;
}
.btn-switch .switch .slider.round:before {
  border-radius: 50%;
}

.btn-social {
  line-height: 160%;
  font-weight: 400;
  color: #565973;
  font-family: "Manrope", sans-serif;
  font-size: 1.25rem !important;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 8px;
  width: 44px;
  height: 44px;
  background-color: #EFF2FC;
  color: #33354D;
}
.btn-social:hover {
  text-decoration: none;
  background: #565973;
  color: #FFFFFF;
}

a {
  line-height: 160%;
  font-weight: 400;
  color: #565973;
  font-family: "Manrope", sans-serif;
  color: #6366F1;
  text-decoration: none;
  transition: all 0.25s ease-in-out;
}
a:hover {
  text-decoration: underline;
}

.menu-link {
  line-height: 160%;
  font-weight: 400;
  color: #565973;
  font-family: "Manrope", sans-serif;
  font-size: 1rem;
  color: #33354D;
  font-weight: 600 !important;
  text-decoration: none;
  transition: color 0.25s ease-in-out;
}
.menu-link:hover, .menu-link:active, .menu-link:focus,
.menu-link .active {
  color: #6366F1;
  text-decoration: none;
}

section .sidebar {
  grid-area: sidebar;
  text-align: start;
}
@media (min-width: 992px) {
  section .sidebar {
    border-right: 1px solid #E2E5F1;
  }
}
section .sidebar .profile-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
}
section .sidebar .profile-wrapper .image-wrapper {
  position: relative;
}
section .sidebar .profile-wrapper .image-wrapper .profile-picture {
  width: 100%;
  height: auto;
}
section .sidebar .profile-wrapper .image-wrapper .change-pic {
  position: absolute;
  bottom: 0;
  right: 0;
  box-shadow: 1px 1px 3px #D4D7E5, 1px 3px 5px #E2E5F1, 2px 6px 8px #EFF2FC, 3px 9px 12px #F3F6FF;
  border-radius: 0.5rem;
  overflow: hidden;
  border-radius: 100%;
  width: 1px;
  height: 1px;
  padding: 1rem;
  background-color: #fff;
}
section .sidebar .profile-wrapper .image-wrapper .change-pic i {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}
section .sidebar a {
  display: block;
  text-decoration: none;
  color: #0B0F19;
  padding: 0.5rem 5rem;
  margin: 0.5rem 1rem 0;
  border-radius: 0.4rem;
}
@media (min-width: 768px) {
  section .sidebar a {
    margin: 0 25%;
    padding: 0.5rem auto;
  }
}
@media (min-width: 992px) {
  section .sidebar a {
    padding: 0.5rem 1rem;
    margin: 0.5rem 1rem 0;
  }
}
section .sidebar a.active {
  box-shadow: 1px 1px 3px #D4D7E5, 1px 3px 5px #E2E5F1, 2px 6px 8px #EFF2FC, 3px 9px 12px #F3F6FF;
  border-radius: 0.5rem;
  overflow: hidden;
  background: #6366F1;
  color: #FFFFFF;
  border: none;
}
section .sidebar a:hover {
  text-decoration: none;
  background: #565973;
  color: #FFFFFF;
}
section .sidebar a i {
  color: #B4B7C9;
  margin: 0 1rem 0 0;
}
section .sidebar a .sign-out {
  rotate: 180deg;
  margin-left: -0.2rem;
}

header {
  padding: 1rem 0;
  position: relative;
}
header .container {
  display: grid;
  align-items: center;
  grid-template-columns: 1fr auto;
  grid-template-areas: "logo mobile";
}
@media (min-width: 992px) {
  header .container {
    gap: 2.5rem;
    grid-template-columns: auto 1fr auto auto;
    grid-template-areas: "logo menu switch buttons";
  }
}
header .container #logo {
  grid-area: logo;
}
header .container #menu {
  grid-area: menu;
  display: none;
}
@media (min-width: 992px) {
  header .container #menu {
    display: block;
  }
}
header .container #menu nav {
  display: flex;
  gap: 1rem;
}
header .container .btn-switch {
  grid-area: switch;
  display: none;
}
@media (min-width: 992px) {
  header .container .btn-switch {
    display: block;
  }
}
header .container .account-buttons {
  grid-area: buttons;
  display: none;
  gap: 1rem;
}
@media (min-width: 992px) {
  header .container .account-buttons {
    display: flex;
  }
}
header .container .account-buttons .user-logged-in {
  width: 50%;
  height: auto;
  transform: translateX(100%);
}
/* ... */

